# MySQL_database_manager

./: README.md
database/: .gitignore  CMakeLists.txt
database/code/include/: Data.h  DatabaseManager.h  IData.h  IDatabaseManager.h  ITableManager.h  TableManager.h
database/code/src/: CafeManager.cpp  ClientManager.cpp  DataManager.cpp  DatabaseManager.cpp  FoodManager.cpp  ListFoodManager.cpp  LocationManager.cpp  OrderManager.cpp  QueueManager.cpp  SupplierManager.cpp  main.cpp
database/tests/include/: test_utils.h
database/tests/src/: test_utils.cpp  tests.cpp
